--- a/test.tex
+++ b/test.tex
@@ -441,10 +441,10 @@ This is a dramatic geometrical confirmation (Fig. 6) for the visible Universe â€
 \begin{figure}[h]
 \centering
 \includegraphics[width=5cm,height=6cm]{./figures/triaxis.png}
-\caption{Geo dimensional Universe-Grandcosmos couple, with unit length The Elctron Compton reduced wavelength. In a 3D Super-space, natural logarithms are considered vectors. The Grandcosmos radius by the Compton electron wavelength appears as the norm of the vector using for length and time projections a common ratio, that of the Hubble radius, and for mass ratio that of the ratio $M^{\prime}$ by the electron mass. $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving $e$ and $a$ reach precision $10^{-7}$.} 
+\caption{Geo dimensional Universe-Grandcosmos couple, with unit length The Electron Compton reduced wavelength. In a 3D Super-space, natural logarithms of physical ratios are considered vectors. The Grandcosmos radius appears as the norm of the vector using for length and time projections a common ratio, that of the Hubble radius, and for mass ratio $M^{\prime}$ byrespect to the electron mass. $M^{\prime}$ being the critical mass in the Grandcosmos reduced spherical hologram, this is a dramatic geometrical confirmation of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving $e$ and $a$ reach precision $10^{-7}$.} 
 \end{figure}
 
-Another crucial point in Physics is the existence of invariant fundamental constants. Thus, association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in Physics necessitates to calculate characteristic values ($M, L, T$), from the three universal constants which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is largely used in Fluid Mechanics, were the equations are intractable. However, is largely ignored in other domains, because there is no real mathematical foundation, apart the above essential remarks, except for the triplet $c, G, \hbar$ which define the above Planck units. 
+Another crucial point in Physics is the existence of invariant fundamental constants. Thus, association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in Physics necessitates to calculate characteristic values ($M, L, T$), from the three universal constants which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is largely used in Fluid Mechanics, were the equations are intractable. However, is largely ignored in other domains because there is not really mathematical foundation, apart the above essential remarks. The triplet $c, G, \hbar$ which define the above Planck units is a notable exception. However, there is no interpretation for the Plack mass, except the fact it appears in Biology \cite{Sanchez1}. 
 
 But, in virtue of the above Hierarchy Principle, the lack of theoretical justification is not a reason to
 neglect Prospective Dimensional Analysis. 
@@ -476,7 +476,7 @@ sustain, meaning that $\rho_{c}$ must be considered a fundamental constant. This
 t\{\hbar,\rho_{c} ,G\}\, = 1/\rho_{c}^{1/2} G^{1/2} = (R/c) (8\pi/3)^{1/2}.
 \end{equation}
 This idea of $\rho_{c}$ being a fundamental constant permits to define $R$ without any ambiguity: this is the 
-radius of the sphere containing critical mass. This means each atom is the center of an equivalent black hole,
+radius of the sphere containing critical mass. This means each topon is the center of an equivalent black hole,
 justifying the above application of the Bekenstein-Hawking entropy. 
 
 Opponents would say that the
@@ -536,10 +536,10 @@ dimension n = 30, the natural extension of the above:
 \begin{equation}
 T^{2} = L^{3} = M^{5} = N^{30}
 \end{equation}
-where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This holic dimension 30 is the touchtone of the Topological axis, from which gauge bosons are deduced by Cartan-Bott reductions [19] (Fig. 1)
+where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depends on the 5th power of its mass. This holic dimension 30 is the touchstone of the Topological axis, from which gauge bosons are deduced by Bott reductions [19] (Fig. 1)
 
 This is called the Holic Principle, relating to the apparent world. The Complete Holic
-Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
+Principle \cite{Sanchez4} involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
 $$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
 where appear the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
 
