--- a/test.tex
+++ b/test.tex
@@ -548,9 +548,9 @@ where appear the masses of the heavy leptons (Section 9.5). This implies a drama
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 The holographic technique is by far the most efficient way to treat huge information \cite{Grosmann}, based on the
-properties of a coherent wave. Now, the main lesson of modern physics is that everything (light \textit{and matter}) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: it has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction by a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section 4.1) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
+properties of a coherent wave. Now, the main lesson of modern physics is that everything (light \textit{and matter}) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: we haven shown that the quantum formalism is very similar to the holographic one, describing an interaction by a two-step holographic process. From these considerations a mass for the photon (confirmed in section 4.1) and graviton has been proposed \cite{Sanchez1}, and are indeed in definite places in the Topological Axis (fig. 1)
 
-A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea of temporal holography proposed in the author's thesis in 1975): this is the subject of Section 3, but using only the Planck length and the topon. It is natural to suppose that they are other holographic wavelengths. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more significant examples. 
+A Holographic Principle has been coined by some theoreticians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea of temporal holography proposed in the author's thesis in 1975): this is the subject of Section 3, but using only the Planck length and the topon. It is natural to suppose that they are other holographic wavelengths. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more significant examples. 
 
 \subsection{The Conservation of Information}
 
@@ -568,7 +568,7 @@ argument in favor of a total conservation of information was tied to a non-evolu
 Note that $e^{a}$ is also compatible with the half volume of the proton, with
 the Planck length as unit.
 
-So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
+So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, especially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
 Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
 
@@ -600,11 +600,11 @@ While the HB entropy of the sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, whe
 \begin{equation}
 \pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 
 \end{equation}
-with a wrong geometric coefficient, the HB entropy of the visible Universe shows a nearly geometric term, with imprecion $\sqrt{4/3\delta} \approx 0.17$:
+with a wrong geometric coefficient, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 0.17$:
 \begin{equation}
 \pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
 \end{equation}
-which is an holographic conservation concerning \textit{the half-sphere of the visible universe}. By analogy with the above scanning process filling the whole sphere (section 3), the above Kotov length $l_k$ (section 4.3) permits to introduce two holographic relations, involving the whole sphere (0.90 \% and 2.6 \%):
+which is a holographic conservation concerning \textit{the half-sphere of the visible universe}. By analogy with the above scanning process filling the whole sphere (section 3), the above Kotov length $l_k$ (section 4.3) permits to introduce two holographic relations, involving the whole sphere (0.90 \% and 2.6 \%):
 \begin{equation}
 \pi(R/l_K)^2 \approx 2\pi l_K/r_e 
 \end{equation}
@@ -617,11 +617,11 @@ The deviation of Eq. (28) is very close to that of Eq.(10), inducing, to 17 ppm 
  (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
 showing a holic form, involving the Muon/Electron mass ratio $mu$ (see section 9.5).
-Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (Eq. 68) (17 ppm and 1.8 ppm) :
+Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the fourth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (Eq. 68) (17 ppm and 1.8 ppm) :
 \begin{equation}
 r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
-The above term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, withy values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm):
+The above term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, with values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm):
 \begin{equation}
 O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
 \end{equation}
@@ -645,7 +645,7 @@ The initial Eddington's proposal for $a$ was the whole number 136, as the number
 series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed: $137 = 11^{2} + 4^{2}$, while, as seen above:$11/4 = (\lambda_{CNB}/\lambda_{CMB})^{3}$
 
 Since Riemann series are tied to the prime number distribution, it seemss odd and incredible that mathematicians
-have not point out the primes appearing in the harmonic series, since it is the single pole. It seems
+have not point out the primes appearing in the harmonic series since it is the single pole. It seems
 that the basic precept `all occurs in the pole` was forgotten in this case. 
 
 As ancient Egyptians used only fractions of type $1/n$, they were certainly aware of this particular harmonic series: 
@@ -671,15 +671,15 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precizing \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
+meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precising \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
 proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos as well as $O_B$, the cardinal order  of the Baby Monster (as confirmed below). 
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambdabar_e \approx 27^{27}$, with $27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
 $$ a/(a-1) \approx 3^{1/150} $$
-Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddy}.
+Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddington}.
 
 \subsection{The Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmical formula (0.3 ppm):    
+    Sir Michael Atiyah was a precursor in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmic formula (0.3 ppm):    
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
@@ -731,7 +731,7 @@ $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^
 \subsection{The ubiquity of $a^{a}$}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 being is a number of parameters in the Eddington matrix, it must be interpreted as a dimension, a privilegied exponent. \textit{So the term $a^a$ must be central}.
+From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 being is a number of parameters in the Eddington matrix, it must be interpreted as a dimension, a privileged exponent. \textit{So the term $a^a$ must be central}.
     
 Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius, to 0.4 and 0.5 \%:
 \begin{equation}
@@ -751,8 +751,8 @@ Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 \begin{equation}
 a^{a} \approx u_1^{3\times(2^{8}-1)}
 \end{equation}
-which defines $a$ to 0.3 ppm. So the number $a$ establishes a connexion between $u_{1}$ and $u_{3}$, two of the
-simplest arithmetics generators. This opens a \textit{new research in pure mathematics}.
+which defines $a$ to 0.3 ppm. So the number $a$ establishes a connection between $u_{1}$ and $u_{3}$, two of the
+simplest arithmetic's generators. This opens a \textit{new research in pure mathematics}.
 
 Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \approx a(a+6)$ to 4 ppm. So, this comes back to the antique problem of the rationalisation of $\sqrt{2}$. Its correct value shows a $8^{th}$ fractional term very close to $\sqrt{5}$, so leading to $\sqrt{2}_a \approx N_{a}/D_{a}$, with $ N_{a} = 239 \sqrt{5} + 99 \approx \Gamma^{2}
 \approx O_B^{1/12} $ and $ D_{a} = 13^2 \sqrt{5} + 70 \approx O_M^{3/61}$,
