--- a/test.tex
+++ b/test.tex
@@ -850,20 +850,20 @@ exhibiting the following property (0.3 ppm):
 with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, 
 
 \subsection {Lenz-Wyler's Formula}
-Armand Wyler singularized a value approaching $a$ to 0.6 ppm and confirmed the pertinence
+Armand Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
 
 A confirmation of a symmetry between $a$ and 137 is the following relation involving $H$, the
 Hydrogen electron mass ratio, precise to 83 ppb:
 $$a/137 \approx (p_0 H)^{1/2} /p$$
 One observes that the rejection of Wyler's work, due to a non-perfect formula for the $p$ and $a$ values, is a new
-manifestation of the general neglectance of the Principle of Hierarchy.
+manifestation of the general ignorance of the Principle of Hierarchy.
 
 A confirmation of a symmetry between $a$ and 137 is the two following approximations for $p$ with the same imprecision 80 ppb, so leading to the ppb relation:
  $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $$ 
 where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
 
-Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
+Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
 Since $R/\lambdabar_e \approx 2^{128}$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
@@ -902,7 +902,7 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
 \subsection {The Four Forces Unification in ppb Fine-Tuning}
-The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal Axis shows clearlty that GUT with $1O^{16}$ GeV gauge boson seems confirmed. However, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was admitted to be:
+The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal Axis shows clearly that GUT with $1O^{16}$ GeV gauge boson seems confirmed. However, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was admitted to be:
 \begin{equation}
 p_G = \sqrt{pH} (p/H)^3/d_e
 \end{equation}
@@ -936,7 +936,7 @@ ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma
 \end{equation}
 Now, as was recalled above, the exponents represent the number of
 dimensions. So, this represents a dimensional reduction, eliminating 137, from 9D and 6D to
-3D, which could be associated with the superstring theory, where the equations are coherent only if space
+3D, which could be associated with the super-string theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
 Note that the strong force parameter $f$ is represented by the Bizouard formula:
 \begin{equation}
@@ -1036,7 +1036,7 @@ Final Theory, while a large majority have abandoned such hope and believes serio
 consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
 debate in favor of a single steady-state cosmos.
 
-This article confirms direct connexions \cite{Sanchez1} between physical and biological parameters. So,
+This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So,
 while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
 `Inverse Anthropic Principle` \cite{Sanchez1} is more logical, stating that an all-deterministic single Cosmos
 implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
@@ -1074,9 +1074,9 @@ with a scientific theory. Secondly, in quantum physics, the so-called `uncertain
 only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier
 transform properties. Thirdly, in cosmology, the recurse to the Multiverse conundrum.
 
-The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of everything. It is strange, and troubling, that this term \textit{immergence} is a neologism.
+The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of everything. It is strange, and troubling that this term \textit{immergence} is a neologism.
 
-Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalisation of $e$ and $\pi$. This have been shown in this article.
+Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of rationalization of $e$ and $\pi$. This have been shown in this article.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Conclusions: Cosmic Simplicity at work}
@@ -1087,7 +1087,7 @@ parameters leads to a return to the Perfect Cosmological Principle implying a St
 confirmed by holographic relations. The standard cosmological principle was unduly limited to
 spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
 not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
-Cosmic Background, which identifies with the Grandcosmos Frame, while Kotov period is an
+Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an
 absolute clock, the dephasage of coherent oscillations between deferent quasars being ruled by the tachyonic celerity.
 
 The simplest topological equations, the equality between dimensionless topological varieties,
@@ -1096,7 +1096,7 @@ chapter of physics. This modern, negative, opinion is in fact in contrast with t
 which the Cosmology is the first of all science, so must be the simplest. In the original sens of the
 word `revolution`, it is a return to the source of Science, the `all is whole number`, of Pythagoras.
 Even the degenerate form of topological or holographic relations, the simplest diophantine
-equations, the Holic Principle, shows direct pertinence. In particular it emphatizes the 30
+equations, the Holic Principle, shows direct pertinence. In particular, it emphasizes the 30
 dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string
 dimensions and 4 of space-time.
 
@@ -1114,8 +1114,7 @@ ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... 
 should be worried what the Universe would be if $a$ were not 137.035999...` This is a definite
 rejection of the Multiverse Hypothesis.
 
-The present article confirms also the Topological Axis, which was obtained by the simplest
-visualizing method to represent in a single figure the characteristic lengths in macro and micro-
+The present article confirms also the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-
 physics, taking the electron wavelength as unity. \textit {the double logarithm representation was the simplest representation}
 
 The pertinence of the Topological Axis confirms
@@ -1128,7 +1127,7 @@ Moreover, excluding $c$ from the simplest tool of elementary physics, the prospe
 analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the
 Topological Axis, whose apparent asymmetry suggests directly the existence of a Grandcosmos.
 
-While it is claimed that String Theory do not connect with experiment, the Cartan-Bott periodicity
+While it is claimed that String Theory do not connect with experiment, the Bott periodicity
 appears, unifying in particular the gauge bosons, so confirming the Standard Model of Particle Physics, but with
 massive gluon, which is independently seriously considered \cite{Salingaros}.
 
@@ -1150,7 +1149,7 @@ trivial fraction 3M/10 of the observable universe, \textit{probably the most dra
 The simplest proof of the computation basis character of the electrical parameter $a$ is provided
 by the multiple appearance of the terms $e^{a}$ and $a^{a}$.
 
-The great significance of a number of dimensions is the number of independent variables,
+The profound significance of a number of dimensions is the number of independent variables,
 which is a fundamental invariant, whatever the theory \cite{Weigel}. So, it is logical to advance a
 hypothesis that 26 physical parameters are defined by the 26 sporadic cardinal orders. Since
 Sporadic Groups are associated with octonion algebra \cite{Atiyah2}, this rejoins a prediction of Atiyah's last
@@ -1171,11 +1170,11 @@ cosmology is the basis of United Science.
 \item 4/ The role of dimensionless parameters, by proving that
 they are optimal basis of computation tied with the Holographic Principle and its arithmetic form,
 the Holic Principle, which explains why normal space has 3 dimensions.
-\item 5/ The necessity of the Cosmos vasteness, resulting from holographic scanning and the rationalisation of $e$ and $\pi$
+\item 5/ The necessity of the Cosmos vasteness, resulting from holographic scanning and the rationalization of $e$ and $\pi$
 \item 6/ The acceleration of expansion, which was predicted by the Eddington's \textit{invariant} cosmological constant $1/R^2$, is tied to a repulsive force proportional to distance, leading to \textit{exponential} recession. there is no need of the so-called 'dark energy'.
 \item 7/ The very existence of dark matter is proven, from the number of neutrons in the trivial fraction 3/10 of the visible Universe critical mass, which identifies with the very symmetric Eddington's number $136 \times 2^{256}$. The nature of dark matter would be simply an anti-phase matter-antimatter oscillation \cite{Sanchez1}.  
 \item 8/ The introduction of the Topon in the Holographic Principle justifies at last the $10^{122}$ gap between vacuum energy and that of the visible Universe.
-\item 9/ The grandcosmos is huge but not infinite, in conformity with the Cosmological Computational Principle.
+\item 9/ The grandcosmos is huge, but not infinite, in conformity with the Cosmological Computational Principle.
 
 In short, the rediscovered cosmos unifies the two main modern cosmologies in a rapid matter-
 antimatter oscillatory bounce. The Cosmos appear as \textit{simple, unique, permanent, computational,
@@ -1184,14 +1183,14 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}.
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{Predictions}\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
+It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 
       This article leads to some predictions:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the \textit{already refuted} standard evolutionary model.
 \item 2/ The CMB temperature will appear invariant. 
 \item 3/ The Particle Physics will integrate the Koide relation together with Koide-Sanchez constant, and introduce massive gluons and composite quark down.
 \item 4/ Informatics software should  be boosted by the principle of multi-base computation.
-\item 5/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
+\item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
 \end{itemize}
 
 
@@ -1213,8 +1212,7 @@ structure of the physical world'', Nature 278, 605--612 (1979).
 
 \bibitem{Eddington} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
-\bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer International Publishing AG. Quantum Systems in Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). 
-Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
+\bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer International Publishing AG. Quantum Systems in Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
 
 \bibitem{Bonvin} V. Bonvin, F. Courbin, S. H. Suyu, P. J. Marshall, C. E. Rusu, D. Sluse, M. Tewes, K. C. Wong, T. Collett, C. D. Fassnacht, T. Treu, M. W. Auger, S. Hilbert, L. V. E. Koopmans, G. Meylan, N. Rumbaugh, A. Sonnenfeld, C. Spiniello ``H0LiCOW V. New COSMOGRAIL time delays of HE0435-1223: H0 to 3.8\% precision from strong lensing in a flat $\Lambda$CDM model'', arXiv: astro-ph/1607.01790v2 (2016).
 
