--- a/test.tex
+++ b/test.tex
@@ -45,14 +45,14 @@
 F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ R. Veysseyre$^5$, \ C. Bizouard$^6$, \ N. Flawisky$^7$, \ D. Gayral$^8$, \ L. Gueroult$^9$\\
 {\footnotesize  $^1$ Pr. Universit\'{e} Paris 11, Orsay, France (retired).\rule{0pt}{12pt}
 E-mail: hol137@yahoo.fr\\
-$^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation.
-$^3$ Pr. at Universit\'{e} Louis Pasteur, Strasbourg, France (retired).
-$^4$ Pr. at Universit\'{e} of Dijon and Paris 6, France (retired).
-$^5$ Pr. at Ecole Centrale, Paris, France (retired).
-$^6$Astronomer at OBSPM, Paris, France.
-$^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture, Paris Malaquais, France.
-$^8$Computer Science Engineer.
-$^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, France (retired).
+$^2$Astronomer Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation. vkotov43@mail.ru
+$^3$ Pr. at Universit\'{e} Louis Pasteur, Strasbourg, France (retired). michelgrosmann@me.com
+$^4$ Pr. at Universit\'{e} of Dijon and Paris 6, France (retired). dominique.weigel@orange.fr
+$^5$ Pr. at Ecole Centrale, Paris, France (retired). renee.veysseyre@gmail.com
+$^6$Astronomer at OBSPM, Paris, France. christian.bizouard@obspm.fr
+$^7$Architect / Math Instructor at Ecole Nationale Superieure d'Architecture, Paris Malaquais, France. flawisky@free.fr
+$^8$Computer Science Engineer. denis.gayral@epita.fr
+$^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, France (retired). lgueroult@hotmail.com
 
 }\par
 \medskip
