--- a/test.tex
+++ b/test.tex
@@ -58,7 +58,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ Trans-Plankian quantified time. This resolves at last the vacuum energy dilemma and confirms the matter-antimatter Oscillatory Bounce. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with the Atiyah's constant, showing Four Force Unification. The Holic Principle and Eddington's Theory must unlock Particle Physics,  with massive gluons and composite d quark. The standard evolutionary cosmology, based on the imperfect cosmological principle, will be excluded by the observation of mature galaxies in the very far-field, and the invariance of the CMB temperature.  
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ Trans-Plankian quantified time. This resolves at last the vacuum energy dilemma and confirms the matter-antimatter Oscillatory Bounce. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's one, showing Four Force Unification. The Holic Principle and Eddington's Theory must unlock Particle Physics, with massive gluons and composite d quark. The standard evolutionary cosmology, based on the imperfect cosmological principle, will be excluded by the observation of mature galaxies in the very far-field, and also by the invariance of the CMB temperature.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
