--- a/test.tex
+++ b/test.tex
@@ -415,7 +415,7 @@ Another unexplained effect is the 75(5) km/s periodicity in the galactic redshif
 
 The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass density $\rho_{c}$.
 
-Much controversial is the Pioneer deceleration \cite{Nieto} $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ It corresponds to he Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $$ close to $$t = R/c \approx 4.3587 \times 10^{17} s $$ The following section will show a connection between the Kotov, Tifft and Pioneer effects.
+Much controversial is the Pioneer deceleration \cite{Nieto} $g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$. It corresponds to he Pioneer time $t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $ close to $t = R/c \approx 4.3587 \times 10^{17} s $. The following section will show a connection between the Kotov, Tifft and Pioneer effects.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Logic of Prospective Dimensional Analysis}\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
