--- a/test.tex
+++ b/test.tex
@@ -596,11 +596,7 @@ the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbe
 
 \subsection{The Holic Principle and Cosmic Coherent Oscillation}
 
-While the HB entropy of the sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos (section 3), verifies the relation:
-\begin{equation}
-\pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 
-\end{equation}
-with a wrong geometric coefficient, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 0.17$:
+While the HB entropy of the sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos (section 3), verifies the relation: $\pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 $, with a wrong geometric coefficient, the HB entropy of the visible Universe shows a nearly geometric term, with imprecision $\sqrt{4/3\delta} \approx 0.17$:
 \begin{equation}
 \pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
 \end{equation}
@@ -612,7 +608,7 @@ which is a holographic conservation concerning \textit{the half-sphere of the vi
 (4\pi/3)(R/l_K)^3 \approx 4\pi (r_e/l_P)^2 
 \end{equation}
 
-The deviation of Eq. (28) is very close to that of Eq.(10), inducing, to 17 ppm and 13 ppm: 
+The deviation of Eq. (27) is very close to that of Eq.(10), inducing, to 17 ppm and 13 ppm: 
 \begin{equation}
  (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
