--- a/test.tex
+++ b/test.tex
@@ -628,7 +628,7 @@ Thus, (0.3 and -0.4 ppm)
 \begin{equation}
 137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
 \end{equation}
-this precises a known relation in Particle Theory.
+this precises a known relation (0.1 \%) in Particle Theory: $a_w/WZ \ approx \sqrt{a}$.   
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The role of Intermediary Mathematical Constants}
