--- a/test.tex
+++ b/test.tex
@@ -628,13 +628,12 @@ Thus, (0.3 and -0.4 ppm)
 \begin{equation}
 137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
 \end{equation}
-this precises a known relation (0.1 \%) in Particle Theory: $a_w/WZ \ approx \sqrt{a}$.   
+this precises a known relation (0.1 \%) in Particle Theory: $a_w/WZ \approx \sqrt{a}$.   
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The role of Intermediary Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \subsection{The Eddington's constant 137}
 
 The initial Eddington's proposal for $a$ was the whole number 136, as the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137, a number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a Singular Prime in the series of the maximal primes appearing in the numerator of the harmonic
@@ -667,7 +666,7 @@ compatible with measurement $a \approx 137.035999139(31)$ in:
 \begin{equation}
 ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 \end{equation}
-meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precising \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
+meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precising \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation base, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
 proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos as well as $O_B$, the cardinal order  of the Baby Monster (as confirmed below). 
 Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambdabar_e \approx 27^{27}$, with $27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
@@ -687,7 +686,7 @@ j \approx ln(R/\lambdabar e) + \Gamma \approx a - e^{\pi} \approx e^{\pi} lna
 \end{equation}
 It was noted \cite{Sanchez1} that $$j\approx T_{mam}/T_{CMB}$$ the ratio between mammal and cosmic temperatures, and that the mammal wavelength enters (1\%) $$(Rl_P)^{1/2}\approx hc/kT_{mam}$$ So, \textit{the couple thermal photon-Life is at the upper center of the Topological Axis}, while the down center is the Higgs boson (Fig.1). The real center, as seen above, is the dimension $n = 16$. Moreover, to 0.1\%, the water triple point enters: $$(R^{\prime}l_P)^{1/2}\approx hc/kT_{H2O}$$ which is also the product of triple points of Hydrogen and Oxygen, divided by the cosmic temperature. This shows that Chemistry is also involved \cite{Sanchez1}.
 
-Now, the study of the 22 amino-acids \cite{Sanchez1} has shown that $j$ is a computation basis. Indeed, to 2\%: $j^{22} \approx 3 P^2 $ and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
+Now, the study of the 22 amino-acids \cite{Sanchez1} has shown that $j$ is also a computation base. Indeed, to 2\%: $j^{22} \approx 3 P^2 $ and, more precisely, to 0.01 \% :$j^{22} \approx Pp_E^7 $ where $ p_E \approx 1847.599459$ is the Eddington's mass ratio of the couple proton-electron, the roots ratio in the Eddington's equation $10x^2 - 136x + 1 = 0 $.
 
 The last equation means the implication of $B = e^{e^{\pi}}$, the double exponential of $\pi$, in the ultimate theory. Indeed, to 0.3 ppm and 0.03 \% :
 \begin{equation}
@@ -714,15 +713,15 @@ confirming that $j$ and $\Gamma$ are generalised dimension, i.e., as privileged 
 
 Note that (Fig 1.):
 \begin{equation}
-m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
+m_{e} c^{2} f(\gamma\Gamma) \approx 125.2 GeV
 \end{equation}
-seems compatible with the Higgs Boson energy, matching with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx (4\pi + 2) (p/d_e p_0)^2 $$ to 30ppb.
+is close to the Higgs Boson energy, matching with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx (4\pi + 2) (p/d_e p_0)^2 $$ to 30 ppb.
 The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and $c$ times the Milankovich period. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
 $$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx \Gamma$.
-One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
-$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrt{a}}$$
-(1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence of the $20^{th}$ power of $F$, corresponding to the 20 normal amino-acids.  
+%One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
+%$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrt{a}}$$
+%(1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence of the %$20^{th}$ power of $F$, corresponding to the 20 normal amino-acids.  
 
 \subsection{The ubiquity of $a^{a}$}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
