--- a/test.tex
+++ b/test.tex
@@ -844,7 +844,7 @@ exhibiting the following property (0.3 ppm):
  $$ (a/137)^{420} \approx (137 - 3)/120 $$  
 with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, 
 
-\subsection {Lenz-Wyler's Formula}
+\subsection {The Lenz-Wyler's Formula}
 Armand Wyler published a value approaching $a$ to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
 
@@ -1294,7 +1294,7 @@ Math. Soc. 11(3) 308--339 (1979)
 
 %\bibitem{Janko} Janko Zvonimir, ``Some new simple groups of finite order``. I, Symposia Mathematica (INDAM, Rome, 1967/68) %Academic Press, London, 1969, pp. 25–64. MR 0244371
 
-\bibitem{Janko1} Janko Z., « A new finite simple group with abelian Sylow subgroups and its characterization », Journal of Algebra, vol. 32, 1966, p. 147-186
+\bibitem{Janko} Janko Z., « A new finite simple group with abelian Sylow subgroups and its characterization », Journal of Algebra, vol. 32, 1966, p. 147-186
 
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
