--- a/test.tex
+++ b/test.tex
@@ -1016,17 +1016,17 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
 
-With $\delta^{\prime} = p_K^2/a^3 $, and the symmetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
+With $\delta_K = p_K^2/a^3 $, and the symmetrised Planck area $(l_P^{\prime})^2 = \sqrt{h \hbar} G/c^3$ (11, -11 ppm, and 0.04 \%):
 \begin{equation}
-\pi^{-1/2}(R_{GC}/l_P^{\prime})^4 \approx (\delta^{\prime} O_M )^9 e^{1/2a} \approx (4\pi)^{1/2}  \mu^{210} \approx \tau^{137}
+\pi^{-1/2}(R_{GC}/l_P^{\prime})^4 \approx (\delta_K O_M )^9 e^{1/2a} \approx (4\pi)^{1/2}  \mu^{210} \approx \tau^{137}
 \end{equation}
-The existence of a Final Theory based on the Holic Principle (section 6), the Grandcosmos and the Koide-Sanchez constant cannot be denied. The interpretation is clear: the 4D space-time in Grandcosmos is associated with a 9D space involving the Monster. \textit{This opens a path towards the Final Theory}. 
+The existence of a Final Theory based on the Holic Principle (section 6), the Grandcosmos and the Koide-Sanchez constant cannot be denied. The interpretation is clear: textit{the 4D space-time of Grandcosmos is associated with a 9D space involving the Monster. This opens a path towards the Final Theory}. 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-There is presently an intense debate in physics community. Only a minority believes in a Single
+There is presently an intense debate in physics community. Only a minority believes in a 
 Final Theory, while a large majority have abandoned such hope and believes seriously in the extreme
 consequence of the `Anthropic Principle`, the Multiverse conundrum. The present article settles the
 debate in favor of a single steady-state cosmos.
@@ -1049,7 +1049,7 @@ sporadic groups is a crucial discovery for physics. In particular, it is clearly
 Grandcosmos is like a computer which uses optimal physics-mathematics dimensionless constants as
 calculation basis and that they are present in DNA characteristics \cite{Sanchez1}. The present article shows
 definitely the liaisons with $e$, $\pi$ and $\gamma$, as well as very special rational approximations of 
-them, and rehabilitates string theories, also abandoned by amajority \cite{Woit}.
+them, and rehabilitates string theories, also abandoned by a majority \cite{Woit}.
 
 There is also the Determinism separation, a majority believing seriously that `God plays dices`,
 in contradiction with our Cosmic Computing Principle. The $c$-free analysis gives simply and
@@ -1061,7 +1061,7 @@ cosmology. For this reason he was declared as a `crakpot` and his theory discard
 Fortunately, the large theoretical advance of Eddington is now recognized \cite{Larin,Durham}, but without
 mentioning a crucial point: he predicted the tau fermion with a right order of mass, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Carr}.
 
-The same rejection seems to apply now to Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
+The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
 
 It seems that the pre-scientific role of chance is a common point between three misleading views
 in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation
@@ -1083,13 +1083,13 @@ confirmed by holographic relations. The standard cosmological principle was undu
 spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
 not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
 Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an
-absolute clock, the dephasage of coherent oscillations between deferent quasars being ruled by the tachyonic celerity.
+absolute clock, the dephasage of coherent oscillations between quasars being ruled by the tachyonic celerity.
 
 The simplest topological equations, the equality between dimensionless topological varieties,
-circumference, area, 3D volume... appear to apply in cosmology, which, for many, seems to be the hardiest
+circumference, area, volume... appear to apply in cosmology, which, for many, seems to be the hardiest
 chapter of physics. This modern, negative, opinion is in fact in contrast with the ancient culture, for
-which the Cosmology is the first of all science, so must be the simplest. In the original sens of the
-word `revolution`, it is a return to the source of Science, the `all is whole number`, of Pythagoras.
+which textit{the Cosmology is the first of all science, so must be the simplest}. In the original sens of the
+word `revolution`, it is a return to the source of Science, the `all is whole number` of Pythagoras.
 Even the degenerate form of topological or holographic relations, the simplest diophantine
 equations, the Holic Principle, shows direct pertinence. In particular, it emphasizes the 30
 dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string
@@ -1104,9 +1104,9 @@ The high precision of relations prove that the traditional scientific thinking i
 the physical parameter values, meaning they are mere mathematical constants. In this respect, the
 high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with far lesser precision, background temperature, must be saluted as decisive achievements.
 
-In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Koide}: `Nobody has
+In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Atiya1}: -extit{`Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
-should be worried what the Universe would be if $a$ were not 137.035999...` This is a definite
+should be worried what the Universe would be if $a$ were not 137.035999...}` This is a definite
 rejection of the Multiverse Hypothesis.
 
 The present article confirms also the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-
@@ -1116,7 +1116,7 @@ The pertinence of the Topological Axis confirms
 the importance of the electron wavy propagation. This rehabilitates the string theory, including the
 \textit{tachyonic} bosonic version, since the canonical dimension 26 appears to characterize the observable
 universe radius $R$. This confirms that $c$ is not really a cosmic pertinent speed, as is clearly shown both by
-logic (it is far too slow) and quantum non-locality.
+logic (it is far too slow) and by the quantum non-locality.
 
 Moreover, excluding $c$ from the simplest tool of elementary physics, the prospective dimensional
 analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the
@@ -1132,7 +1132,7 @@ Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confu
 1, impeded the fact that the Hubble-Lema\^{i}tre radius $R$ is a trivial length.
 
 The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
-justifying the elimination of $c$, as in the Haas-Bohr model. This corresponds to a Hubble constant 70.790
+justifying the elimination of $c$, as in the Haas-Bohr model \site{Sanchez1}. This corresponds to a Hubble constant 70.790
 (km/s)/Megaparsec, consistent with the recent measurement \cite{Bonvin}: 72(3) Megaparsec/(km/s), which
 confirms the direct novea measurement, but disagree (3$\sigma$) with the standard value.
 
@@ -1181,10 +1181,10 @@ deterministic, trans-planckian, cyclic, topological and inverse-anthropic}.
 It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, especially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 
       This article leads to some predictions:
-\item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the \textit{already refuted} standard evolutionary model.
+\item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the standard evolutionary model, based on the impefect cosmological principle.
 \item 2/ The CMB temperature will appear invariant. 
-\item 3/ The Particle Physics will integrate the Koide relation together with Koide-Sanchez constant, and introduce massive gluons and composite quark down.
-\item 4/ Informatics software should  be boosted by the principle of multi-base computation.
+\item 3/ The Particle Physics will integrate the Koide relation together with the Koide-Sanchez constant, and introduce massive gluons and composite quark down.
+\item 4/ Informatics software should be boosted by the principle of multi-base computation.
 \item 5/ The multiple connections with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
 \end{itemize}
 
