--- a/test.tex
+++ b/test.tex
@@ -1132,7 +1132,7 @@ Poincar\'{e}, the father of 4D Relativity Theory recommended. Indeed their confu
 1, impeded the fact that the Hubble-Lema\^{i}tre radius $R$ is a trivial length.
 
 The simplest model, the gravitational Hydrogen molecule gives $R$, explaining the 2 factor and
-justifying the elimination of $c$, as in the Haas-Bohr model \site{Sanchez1}. This corresponds to a Hubble constant 70.790
+justifying the elimination of $c$, as in the Haas-Bohr model \cite{Sanchez1}. This corresponds to a Hubble constant 70.790
 (km/s)/Megaparsec, consistent with the recent measurement \cite{Bonvin}: 72(3) Megaparsec/(km/s), which
 confirms the direct novea measurement, but disagree (3$\sigma$) with the standard value.
 
