--- a/test.tex
+++ b/test.tex
@@ -1207,7 +1207,7 @@ structure of the physical world'', Nature 278, 605--612 (1979).
 
 \bibitem{Eddington} Eddington A.S. The Fundamental Theory (Cambridge, 1946).
 
-\bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer International Publishing AG. Quantum Systems in Physics, Chemistry, and Biology, Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
+\bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer. Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
 
 \bibitem{Bonvin} V. Bonvin, F. Courbin, S. H. Suyu, P. J. Marshall, C. E. Rusu, D. Sluse, M. Tewes, K. C. Wong, T. Collett, C. D. Fassnacht, T. Treu, M. W. Auger, S. Hilbert, L. V. E. Koopmans, G. Meylan, N. Rumbaugh, A. Sonnenfeld, C. Spiniello ``H0LiCOW V. New COSMOGRAIL time delays of HE0435-1223: H0 to 3.8\% precision from strong lensing in a flat $\Lambda$CDM model'', arXiv: astro-ph/1607.01790v2 (2016).
 
@@ -1221,8 +1221,7 @@ two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
 \bibitem{Duplantier} Duplantier B. ``Introduction a l'effet Casimir''. Seminaire
 Poincare 1, 41--54 (2002).
 
-\bibitem{Damour} Damour T. ``The Entropy of Black Hole: a Primer''. Seminaire
-Poincare 2, 89--115 (2003).
+\bibitem{Damour} Damour T. ``The Entropy of Black Hole''. Sem. Poincare 2, 89--115 (2003).
 
 \bibitem{Kotov1} Kotov V.A. and Lyuty V.M. ``The 160-min. periodicity in the optical
 and X-ray observations of extragalactic objects''. Compt. Rend. Acad. Sci.
@@ -1274,9 +1273,9 @@ Two Times''. Phys. Rev. D 58 (1998); hep-th/9803188,
 de Bott''. I. Seminaire Henri Cartan, Tome 12 (1959-1960) no. 2, Expose no. 16,
 p. 1--16.
 
-\bibitem{Sanchez4} Sanchez Francis M. (Sept 1995), Entelechies, Proceedings of the 16th Annual International meeting of ANPA held at the Univeristy of Cambridge, K.G. Bowden Editor, Holic Principle: The coherence of the Universe, 324--344
+\bibitem{Sanchez4} Sanchez F; M. ``Holic Principle: The coherence of the Universe`` (Sept 1995), Entelechies, 16th ANPA, 324--344.
 
-\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979
+\bibitem{Grosmann} Grosmann, M. and Meyrueis P. ``Optics and Photonics Applied to Communication and Processing''. SPIE.  Jan 1979.
 
 \bibitem{Preskill} Preskill J. ``Do black holes destroy information?'' Internat.
 Symp. on Black Holes, Membranes, Wormholes, and Superstrings (1992);
@@ -1286,8 +1285,7 @@ arXiv:hep-th/9209058.
 treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 218--221 (2009); arXiv:0905.0538.
 
-\bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. 4th Heidelberg Laureate
-Forum conference (2018); www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/.
+\bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/.
 
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
 Math. Soc. 11(3) 308--339 (1979)
@@ -1301,8 +1299,7 @@ Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
 \bibitem{Brannen} Brannen C.A. ``The Lepton Masses``, http://brannenworks.com/MASSES2.pdf, (2006).
 
-\bibitem{Polchinski} Polchinski J. ``String Theory'', vol. 1, p. 22 (Cambridge
-University Press, 1998).
+\bibitem{Polchinski} Polchinski J. ``String Theory'', vol. 1, p. 22 (C.U.P., 1998).
 
 \bibitem{Chauvin} Chauvin R. ``Le Darwinisme ou la fin d'un mythe'', ed. du Rocher
 (1997).
@@ -1323,7 +1320,7 @@ Physics'' (2006), p. 111; arXiv:quant-ph/0603146v1.
 Numbers''. Foundations of Physics 15 (6), 683--691 (1985).
 
 \bibitem{Weigel} Weigel D., Veysseyre R. and Carel C. ``Sur les symboles du groupe
-d'espace d'une wustite de tri-incommensurabilite cubique est sur les groupes de
+d'espace d'une wustite de tri-incommensurabilite cubique et sur les groupes de
 Bravais de sa famlille cristalline dans l'espace euclidien a six dimensions''.
 Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
