--- a/test.tex
+++ b/test.tex
@@ -971,15 +971,15 @@ The standard model is unable to explain why there are three famillies of particl
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-This Koide constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in Eq. (31), which means that, to 2 ppm (with an additive term at 0.16 ppm):
+This Koide-Sanchez constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in Eq. (31), which means that, to 2 ppm (with an additive term at 0.16 ppm):
 \begin{equation}
 p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e
 \end{equation}
-With the above $\mu$ value, $\tau \approx 3477.441701$, a value which obeys, to 0.7 and -0.8 ppm:
+With the above $\mu$ value, $\tau \approx 3477.441701$, a value which enters, to 0.7 and -0.8 ppm:
 \begin{equation}
 e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2 
 \end{equation}
-resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining an Brout-Englert-Higgs ratio $s \approx 495.88^2$:
+resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so proposing a Brout-Englert-Higgs ratio $s \approx 495.88^2$:
 $$
 \begin{array}{ll}
 %
@@ -987,7 +987,7 @@ $$
 F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%. Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4 \% and 30 ppb):
+(0.7 ppm, 0.3 \%, 0.1 \%). Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4 \% and 30 ppb):
 $$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$ 
 
  With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5, 17 and 40 ppm):
